Fix image distortion in WP

--- a/blog/wp-content/themes/jm2023/style.css
+++ b/blog/wp-content/themes/jm2023/style.css
@@ -1,3 +1,7 @@
 /*
 Theme Name: Jill Menning 2023
 */
+
+img {
+    height: auto;
+}
